objects/Matter_Spend_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exported_Date__c</fullName>
        <label>Exported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Law_Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Law Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Document_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Litigation_Approval_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Litigation Approval Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Litigation_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Litigation Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Matter_Spend_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Matter_Type__c</fullName>
        <label>Matter Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Litigation</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Submitted For Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Exported</fullName>
                </value>
                <value>
                    <fullName>Pending Payment</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Age_Days__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&quot;Closed&quot;),  TODAY()-Closed_Date__c, TODAY()-DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Age (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Spend_Amount__c</fullName>
        <label>Total Spend Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vat_Type__c</fullName>
        <label>Vat Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VAT</fullName>
                </value>
                <value>
                    <fullName>Non Vat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Matter Spend Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Law_Firm__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Total_Spend_Amount__c</columns>
        <columns>Vat_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SS-{00000}</displayFormat>
        <label>Schedule #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matter Spend Schedules</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>